--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="nl" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+  </body>
+</html>
