--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>test</title>
   </head>
   <body>
 
