--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>test</title>
+    <link rel="stylesheet" href="css/opmaak.css" type="text/css">
   </head>
   <body>
     <p>hello world</p>
