Menu gemaakt dat nog niet af is, nieuw font en overzichtelijke code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="css/opmaak.css" type="text/css">
   </head>
   <body>
-    <p>hello world</p>
+    <div class="page">
+      <div class="nav">
+        <ul>
+          <li id="eli"><a href="index.html">Home</a></li>
+          <li><a href="pagina/projecten.html">Projecten</a></li>
+          <li>Badges</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <h1>Dylan Kooistra</h1>
+    </div>
   </body>
 </html>
