--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <ul>
           <li id="eli"><a href="index.html">Home</a></li>
           <li><a href="pagina/projecten.html">Projecten</a></li>
-          <li>Badges</li>
-          <li>Contact</li>
+          <li><a href="pagina/badges.html">Badges</a></li>
+          <li><a href="pagina/contact.html">Contact</a></li>
         </ul>
       </div>
       <h1>Dylan Kooistra</h1>
