--- a/pagina/contact.html
+++ b/pagina/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl" dir="ltr">
+<html lang="NL" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -15,7 +15,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-      <h1>Projecten</h1>
+      <h1>Contact</h1>
     </div>
   </body>
 </html>
