Titels verandert en kleur van de pagina h1 verandert

--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -2,7 +2,7 @@
 <html lang="nl" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Projecten</title>
     <link rel="stylesheet" href="../css/opmaak.css" type="text/css">
   </head>
   <body>
