--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/opmaak.css" type="text/css">
   </head>
   <body>
