Nieuwe pagina API toegevoegd en meer divjes gemaakt

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
           <li><a href="pagina/projecten.html">Projecten</a></li>
           <li><a href="pagina/badges.html">Badges</a></li>
           <li><a href="pagina/contact.html">Contact</a></li>
+          <li><a href="pagina/apis.html">API's</a></li>
         </ul>
       </div>
-      <h1>Dylan Kooistra</h1>
+      <div class="title">
+        <h1>Badges</h1>
+      </div>
+      <div class="text">
+
+      </div>
     </div>
-    update 1
+    update 2
   </body>
 </html>
