--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -13,9 +13,15 @@
           <li><a href="projecten.html">Projecten</a></li>
           <li><a href="badges.html">Badges</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="apis.html">API's</a></li>
         </ul>
       </div>
-      <h1>Projecten</h1>
+      <div class="title">
+        <h1>Badges</h1>
+      </div>
+      <div class="text">
+
+      </div>
     </div>
   </body>
 </html>
