--- a/pagina/apis.html
+++ b/pagina/apis.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="NL" dir="ltr">
+<html lang="nl" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contact</title>
-    <link rel="stylesheet" href="../css/opmaak.css" type="text/css">
+    <title>API's</title>
   </head>
   <body>
     <div class="page">
@@ -17,7 +16,7 @@
         </ul>
       </div>
       <div class="title">
-        <h1>Contact</h1>
+        <h1>API's</h1>
       </div>
       <div class="text">
 
