API pagina werkt nu.

--- a/pagina/apis.html
+++ b/pagina/apis.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>API's</title>
+    <link rel="stylesheet" href="css/opmaak.css" type="text/css">
   </head>
   <body>
     <div class="page">
