Text toegevoegd aan de API pagina.

--- a/pagina/apis.html
+++ b/pagina/apis.html
@@ -17,10 +17,12 @@
         </ul>
       </div>
       <div class="title">
-        <h1>API's</h1>
+        <h1>Api's</h1>
       </div>
       <div class="text">
-
+        <p>Een API is code die een developer kan gebruiken om het programma makkelijker te programmeren.
+      </p>
+      <p>Ik ga ook nog API's maken, maar die heb ik nog niet gemaakt.</p>
       </div>
     </div>
   </body>
