Badges pagina aangepast en javascript toegevoegd, knoppen werken nog niet.

--- a/pagina/apis.html
+++ b/pagina/apis.html
@@ -22,7 +22,7 @@
       <div class="text">
         <p>Een API is code die een developer kan gebruiken om het programma makkelijker te programmeren.
       </p>
-      <p>Ik ga ook nog API's maken, maar die heb ik nog niet gemaakt.</p>
+      <p>Er komen hier later een paar API's die ik heb gemaakt, maar die zijn nu nog niet beschikbaar.</p>
       </div>
     </div>
   </body>
