--- a/pagina/badges.html
+++ b/pagina/badges.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../css/opmaak.css" type="text/css">
   </head>
   <body>
+    <div class="scripts">
+      <script type="text/javascript" src="../javascript/badges.js"></script>
+    </div>
     <div class="page">
       <div class="nav">
         <ul>
@@ -20,7 +23,14 @@
         <h1>Badges</h1>
       </div>
       <div class="text">
-
+        <p>Ik zit in het CoderClass op het Metis, dus moet ik wel wat badges hebben gehaald. Zie hier een overzicht van levels en badges die ik heb gehaald!</p>
+      </div>
+      <div class="levels">
+        <a onclick="lvl1()">Level 1</a>
+        <a>Level 2</a>
+        <a>Level 3</a>
+        <a>Level 4</a>
+        <a>Level 5</a>
       </div>
     </div>
   </body>
