Je kan nu mijn badges bekijken.

--- a/pagina/badges.html
+++ b/pagina/badges.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="../css/opmaak.css" type="text/css">
   </head>
   <body>
-    <div class="scripts">
-      <script type="text/javascript" src="../javascript/badges.js"></script>
-    </div>
     <div class="page">
       <div class="nav">
         <ul>
@@ -26,12 +23,23 @@
         <p>Ik zit in het CoderClass op het Metis, dus moet ik wel wat badges hebben gehaald. Zie hier een overzicht van levels en badges die ik heb gehaald!</p>
       </div>
       <div class="levels">
-        <a onclick="lvl1()">Level 1</a>
-        <a>Level 2</a>
-        <a>Level 3</a>
-        <a>Level 4</a>
-        <a>Level 5</a>
+        <a id="mc1">Level 1</a>
+        <a id="mc2">Level 2</a>
+        <a id="mc3">Level 3</a>
+        <a id="mc4">Level 4</a>
+        <a id="mc5">Level 5</a>
       </div>
+      <div class="modules">
+        <p id="moduletxt"></p>
+        <p id="module1"></p>
+        <p id="module2"></p>
+        <p id="module3"></p>
+        <p id="module4"></p>
+        <p id="module5"></p>
+      </div>
+    </div>
+    <div class="scripts">
+      <script type="text/javascript" src="../javascript/badges.js"></script>
     </div>
   </body>
 </html>
