--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
       </div>
       <div class="title">
-        <h1>Badges</h1>
+        <h1>Home</h1>
       </div>
       <div class="text">
 
