--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -17,7 +17,7 @@
         </ul>
       </div>
       <div class="title">
-        <h1>Badges</h1>
+        <h1>Projecten</h1>
       </div>
       <div class="text">
 
