Home pagina aangepast, nog niet af.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <h1>Home</h1>
       </div>
       <div class="text">
-
+        <div class="introductie">
+          <p>Hallo! Mijn naam is Dylan Kooistra. Ik zit op het Metis Montessori Lyceum en woon op Ijburg. Ik ben 12 jaar oud en mijn favoriete hobby is programmeren, en daarna natuurlijk gamen.</p>
+        </div>
       </div>
     </div>
     update 2
