--- a/pagina/apis.html
+++ b/pagina/apis.html
@@ -20,7 +20,7 @@
         <h1>Api's</h1>
       </div>
       <div class="text">
-        <p>Een API is code die een developer kan gebruiken om het programma makkelijker te programmeren.
+        <p>Een API is code die een developer kan gebruiken om een programma makkelijker te programmeren.
       </p>
       <p>Er komen hier later een paar API's die ik heb gemaakt, maar die zijn nu nog niet beschikbaar.</p>
       </div>
