Nieuw project toegevoegd, je kan hem downloaden

--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -20,7 +20,10 @@
         <h1>Projecten</h1>
       </div>
       <div class="text">
-
+        <p>Ik vind het leuk om grote projecten te doen, dus hier is een lijst met projecten die ik heb gemaakt</p>
+      </div>
+      <div class="projecten">
+        <a id="ea" href="../project/MyTrafficStory/mytrafficstory.html">My Traffic Story</a>
       </div>
     </div>
   </body>
