My traffic story project aangepast

--- a/project/MyTrafficStory/mytrafficstory.html
+++ b/project/MyTrafficStory/mytrafficstory.html
@@ -17,13 +17,17 @@
         </ul>
       </div>
       <div class="title">
-        <h1>My Traffic Story</h1>
+        <h1>Projecten</h1>
       </div>
-
+      <div class="kop">
+        <h2>My Traffic Story</h2>
       </div>
-      <a class="projectdownload" href="My Traffic Story.zip" download>
-        <p>Download</p>
-      </a>
+      <div class="text">
+        <p>My Traffic Story is gemaakt door mij, Kick en Luuk. Het was voor een projectweek van Coderclass. Het is een game waar je door straten moet manoeuvreren, totdat je bij een bepaald punt komt.</p>
+        <a class="projectdownload" href="My Traffic Story.zip" download>
+          <p>Download</p>
+        </a>
+      </div>
     </div>
   </body>
 </html>
