Begin aan contact pagina en een paar tweaks aan de website.

--- a/pagina/contact.html
+++ b/pagina/contact.html
@@ -20,7 +20,7 @@
         <h1>Contact</h1>
       </div>
       <div class="text">
-
+        <p>Je kan me mailen op het emailadres <strong>dylan@dylankooistra.nl</strong>.</p>
       </div>
     </div>
   </body>
