Een paar tweaks, maar vooral contact pagina afgemaakt.

--- a/pagina/contact.html
+++ b/pagina/contact.html
@@ -20,6 +20,19 @@
         <h1>Contact</h1>
       </div>
       <div class="text">
+        <div class="socialmedia">
+          <p>Mijn social media:</p>
+          <div class="logolinks">
+            <a href="https://www.youtube.com/channel/UCVVfLDhJdSgzez4q3qJRrgQ" target="_blank"><img src="../foto/youtube.png" alt="YouTube"></a>
+            <a href="https://twitter.com/dylko4ever" target="_blank"><img src="../foto/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/dylko4ever/" target="_blank"><img src="../foto/instagram.jpg" alt="Instagram"></a>
+            <a href="https://github.com/Dylko4ever" target="_blank"><img src="../foto/github.png" alt="Github"></a>
+            <a href="https://www.reddit.com/user/Dylk0" target="_blank"><img src="../foto/reddit.jpg" alt="Reddit"></a>
+            <a href="https://www.twitch.tv/dylk0" target="_blank"><img src="../foto/twitch.png" alt="Twitch"></a>
+            <a href="https://steamcommunity.com/profiles/76561199113509699/" target="_blank"><img src="../foto/steam.jpg" alt="Steam"></a>
+          </div>
+        </div>
+        <br>
         <p>Je kan me mailen op het emailadres <strong>dylan@dylankooistra.nl</strong>.</p>
       </div>
     </div>
