--- a/pagina/badges.html
+++ b/pagina/badges.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="scripts">
-      <script type="text/javascript" src="../javascript/badges.js"></script>
+      <script src="../javascript/badges.js"></script>
     </div>
   </body>
 </html>
