--- a/pagina/apis.html
+++ b/pagina/apis.html
@@ -22,7 +22,7 @@
       <div class="text">
         <p>Een API is code die een developer kan gebruiken om een programma makkelijker te programmeren.
       </p>
-      <p>Er komen hier later een paar API's die ik heb gemaakt, maar die zijn nu nog niet beschikbaar. Als ze er zijn dan kun je vinden hoe je ze moet gebruiken op <a class="exlink" href="https://github.com/Dylko4ever/Dylko4ever.github.io/wiki" target="_blank">de Github wiki</a>.</p>
+      <p>Ik ben nu een python API aan het werken genaamd DAPI, maar die is nu nog niet beschikbaar. Als hij er zijn dan kun je vinden hoe je hem moet gebruiken op <a class="exlink" href="https://github.com/Dylko4ever/Dylko4ever.github.io/wiki" target="_blank">de Github wiki</a>.</p>
       </div>
     </div>
   </body>
