Project Bits Of You toegevoegd, maar de Bits Of You is nog niet af.

--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -24,6 +24,7 @@
       </div>
       <div class="projecten">
         <a id="ea" href="../project/MyTrafficStory/mytrafficstory.html">My Traffic Story</a>
+        <a href="../project/BitsOfYou/index.html"></a>
       </div>
     </div>
   </body>
