--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -24,7 +24,7 @@
       </div>
       <div class="projecten">
         <a id="ea" href="../project/MyTrafficStory/mytrafficstory.html">My Traffic Story</a>
-        <a href="../project/BitsOfYou/index.html"></a>
+        <a href="../project/BitsOfYou/index.html">Bits Of You projectweek Metis</a>
       </div>
     </div>
   </body>
