Nieuw project toegevoegd

--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -25,6 +25,8 @@
       <div class="projecten">
         <a id="ea" href="../project/MyTrafficStory/mytrafficstory.html">My Traffic Story</a>
         <a href="../project/BitsOfYou/index.html">Bits Of You projectweek Metis</a>
+        <a href="../project/Python-Webdevelopment/project.html">Python-in-Webdevelopment-0</a>
+        <a href="../project/The-Task-Road/project.html">The Task Road</a>
       </div>
     </div>
   </body>
