--- a/project/The-Task-Road/project.html
+++ b/project/The-Task-Road/project.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/opmaak.css" type="text/css">
+    <link rel="stylesheet" href="../../css/opmaak.css" type="text/css">
   </head>
   <body>
     <div class="page">
