Er stond Home bij the task road project... lol

--- a/project/The-Task-Road/project.html
+++ b/project/The-Task-Road/project.html
@@ -17,7 +17,7 @@
         </ul>
       </div>
       <div class="title">
-        <h1>Home</h1>
+        <h1>The Task Road</h1>
       </div>
       <div class="text">
         <p>The Task Road is een pygame game gemaakt voor de Metis GameJam 2022. Het is een game waar je taken hebt en die je moet doen, anders gebeurt een nachtmerrie die je hebt gedroomd echt. </p>
