--- a/pagina/badges.html
+++ b/pagina/badges.html
@@ -28,6 +28,7 @@
         <a id="mc3">Level 3</a>
         <a id="mc4">Level 4</a>
         <a id="mc5">Level 5</a>
+        <a id="mc6">Level 6</a>
       </div>
       <div class="modules">
         <p id="module1"></p>
