Itch.io toegevoegd aan social media

--- a/pagina/contact.html
+++ b/pagina/contact.html
@@ -30,6 +30,7 @@
             <a href="https://www.reddit.com/user/Dylk0" target="_blank"><img src="../foto/reddit.jpg" alt="Reddit"></a>
             <a href="https://www.twitch.tv/dylk0" target="_blank"><img src="../foto/twitch.png" alt="Twitch"></a>
             <a href="https://steamcommunity.com/profiles/76561199113509699/" target="_blank"><img src="../foto/steam.jpg" alt="Steam"></a>
+            <a href="https://catsarecoolxd.itch.io/" target="_blank"><img src="../foto/itch.png" alt="Itch.io"></a>
           </div>
         </div>
         <br>
