--- a/pagina/contact.html
+++ b/pagina/contact.html
@@ -14,6 +14,7 @@
           <li><a href="badges.html">Badges</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="apis.html">API's</a></li>
+          <li><a href="tools.html">Tools</a></li>
         </ul>
       </div>
       <div class="title">
@@ -26,9 +27,9 @@
             <a href="https://www.youtube.com/channel/UCVVfLDhJdSgzez4q3qJRrgQ" target="_blank"><img src="../foto/youtube.png" alt="YouTube"></a>
             <a href="https://twitter.com/dylko4ever" target="_blank"><img src="../foto/twitter.png" alt="Twitter"></a>
             <a href="https://www.instagram.com/dylko4ever/" target="_blank"><img src="../foto/instagram.jpg" alt="Instagram"></a>
-            <a href="https://github.com/Dylko4ever" target="_blank"><img src="../foto/github.png" alt="Github"></a>
-            <a href="https://www.reddit.com/user/Dylk0" target="_blank"><img src="../foto/reddit.jpg" alt="Reddit"></a>
-            <a href="https://www.twitch.tv/dylk0" target="_blank"><img src="../foto/twitch.png" alt="Twitch"></a>
+            <a href="https://github.com/catsarecoolxd" target="_blank"><img src="../foto/github.png" alt="Github"></a>
+            <a href="https://www.reddit.com/user/catsarecoolxd" target="_blank"><img src="../foto/reddit.jpg" alt="Reddit"></a>
+            <a href="https://www.twitch.tv/catsarecoolxd" target="_blank"><img src="../foto/twitch.png" alt="Twitch"></a>
             <a href="https://steamcommunity.com/profiles/76561199113509699/" target="_blank"><img src="../foto/steam.jpg" alt="Steam"></a>
             <a href="https://catsarecoolxd.itch.io/" target="_blank"><img src="../foto/itch.png" alt="Itch.io"></a>
           </div>
