--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -14,6 +14,7 @@
           <li><a href="badges.html">Badges</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="apis.html">API's</a></li>
+          <li><a href="tools.html">Tools</a></li>
         </ul>
       </div>
       <div class="title">
@@ -27,6 +28,7 @@
         <a href="../project/BitsOfYou/index.html">Bits Of You projectweek Metis</a>
         <a href="../project/Python-Webdevelopment/project.html">Python-in-Webdevelopment-0</a>
         <a href="../project/The-Task-Road/project.html">The Task Road</a>
+        <a href="../project/ShootShot/project.html">ShootShot</a>
       </div>
     </div>
   </body>
