--- a/project/ShootShot/project.html
+++ b/project/ShootShot/project.html
@@ -2,7 +2,7 @@
 <html lang="nl" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>ShootShot</title>
     <link rel="stylesheet" href="../../css/opmaak.css" type="text/css">
   </head>
   <body>
@@ -18,11 +18,17 @@
         </ul>
       </div>
       <div class="title">
-        <h1>The Task Road</h1>
+        <h1>ShootShot</h1>
       </div>
       <div class="text">
-        <p>The Task Road is een pygame game gemaakt voor de Metis GameJam 2022. Het is een game waar je taken hebt en die je moet doen, anders gebeurt een nachtmerrie die je hebt gedroomd echt. </p>
-        <a class="projectdownload" href="https://github.com/Dylko4ever/The-Task-Road">Download</a>
+        <div class="beschrijving">
+          <p>ShootShot is een eindeloze game waar je jezelf moet hooghouden met een shotgun.</p>
+          <p>Je collect coins om meer score te krijgen. Denk jij dat je een highscore van 100 kan krijgen? Download de game om te proberen!</p>
+        </div>
+      </div>
+      <br>
+      <div class="text">
+        <a class="link" href="https://catsarecoolxd.itch.io/ShootShot"><h2>Download</h2></a>
       </div>
     </div>
   </body>
