--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           <li><a href="pagina/badges.html">Badges</a></li>
           <li><a href="pagina/contact.html">Contact</a></li>
           <li><a href="pagina/apis.html">API's</a></li>
+          <li><a href="pagina/tools.html">Tools</a></li>
+
         </ul>
       </div>
       <div class="title">
