--- a/pagina/badges.html
+++ b/pagina/badges.html
@@ -14,6 +14,7 @@
           <li><a href="badges.html">Badges</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="apis.html">API's</a></li>
+          <li><a href="tools.html">Tools</a></li>
         </ul>
       </div>
       <div class="title">
