Javascript voor games-0 project toegevoegd.

--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -28,6 +28,7 @@
         <a href="../project/BitsOfYou/index.html">Bits Of You projectweek Metis</a>
         <a href="../project/The-Task-Road/project.html">The Task Road</a>
         <a href="../project/ShootShot/project.html">ShootShot</a>
+        <a href="javascript-voor-games-0/output.html">Javascript-voor-games-0</a>
       </div>
     </div>
   </body>
