Javascript-voor-games-0 toegevoegd aan badge pagina

--- a/pagina/projecten.html
+++ b/pagina/projecten.html
@@ -29,6 +29,7 @@
         <a href="../project/The-Task-Road/project.html">The Task Road</a>
         <a href="../project/ShootShot/project.html">ShootShot</a>
         <a href="javascript-voor-games-0/output.html">Javascript-voor-games-0</a>
+        <a href="../project/chess/chess.html">Chess</a>
       </div>
     </div>
   </body>
