--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="text">
         <div class="introductie">
-          <p>Hallo! Mijn naam is Dylan Kooistra. Ik zit op het Metis Montessori Lyceum en woon op Ijburg. Ik ben 12 jaar oud en mijn favoriete hobby is programmeren, en daarna natuurlijk gamen.</p>
+          <p>Hallo! Mijn naam is Dylan Kooistra. Ik zit op het Metis Montessori Lyceum en woon op Ijburg. Ik ben 13 jaar oud en mijn favoriete hobby is gamen, en daarna programmeren.</p>
         </div>
       </div>
     </div>
